--- a/src/sections/collection/featured-items/silder/Slider.module.scss
+++ b/src/sections/collection/featured-items/silder/Slider.module.scss
@@ -28,6 +28,7 @@
       scroll-snap-align: start;
       justify-content: center;
       max-height: 100%;
+      overflow-x: hidden;
     }
   }
 
